# build-games

./: .env.example  .gitignore  README.md  todo.md
abis/: APIIntegrityRegistry.json  APIRegistryFactory.json  APIRevenueFuture.json  APIRevenueStable.json  APIUSD.json  APIYieldIndex.json  AccessControl.json  AutomationBase.json  AutomationCompatible.json  AutomationCompatibleInterface.json  ChallengeManager.json  ERC165.json  ERC4626.json  FunctionsClient.json  FunctionsRequest.json  IAPIIntegrityRegistry.json  IAccessControl.json  IERC1363.json  IERC20Metadata.json  IERC4626.json  IFunctionsClient.json  IFunctionsRouter.json  IMulticall3.json  IProviderRevenueShare.json  IStakeManager.json  InitialAPIOffering.json  MockUSDC.json  MockUSDCSwap.json  Ownable.json  Pausable.json  ProviderRevenueShare.json  ProviderRevenueSplitter.json  ProviderRevenueVault.json  ReentrancyGuard.json  RevShareStable.json  SafeCast.json  SafeERC20.json  Script.json  StakeManager.json  Strings.json  (+4 more)
analytics/: README.md  pyproject.toml
analytics/src/: analytics_api.py  analytics_dashboard.py  analytics_indexer.py  analytics_state.json  utils.py
challenger_watcher/: README.md  challenger_watcher.py  pyproject.toml
challenger_watcher/src/: utils.py  x402_metadata.py
cli/: pyproject.toml
cli/composed_cli/: admin_cli.py  cli.py  utils.py  verify.py
contracts/: .env.sample  .gitignore  README.md  build.sh  foundry.toml  pyproject.toml
contracts/chainlink/: compute-hash.js  dry-run.js
contracts/composed/: _abis.py  client.py  (+3 more)
contracts/scripts/: CLI.md  admin_cli.py  analytics_api.py  analytics_dashboard.py  analytics_indexer.py  api_registry_factory.py  challenger_watcher.py  cli.py  cre_watcher.py  pyproject.toml  set_forwarder.py  stake_manager.py  utils.py  verify.py  x402_metadata.py
contracts/scripts/archive/: api_integrity_registry.py  api_registry_factory.py  challenge_manager.py  check_splitter.py  check_vault.py  debug_verify.py  test_flatten.py  verify_splitter.py
contracts/scripts/mock/: mock_usdc.py
cre/: .env.sample  README.md  project.sample.yaml
cre_watcher/: cre_watcher.py  cre_watcher_state.json  pyproject.toml
demo/: frontend.md
docs/: CHAINLINK_INTEGRATION.md  CHAINLINK_README.md  CLEANUP_PLAN.md  CRITICAL_FIX.md  Composed Protocol - GTM 31fc9c1ffe4b80e792d4f785787ec93b.md  Composed Protocol - GTM Clean.md  DEPLOYMENT.md  ERC4626_DEPRECATION.md  IDEA.md  IDEAS.md  OVERVIEW.md  REORGANIZATION.md  SUMMARY.md  analytics.md  endpoint-ownership-verification.md  faq.md  frontend-provider-registration.md  payto-validation-plan.md  protocol-design-analysis.md  wrapped-revenue-share-spec.md
frontend/: next.config.ts  package-lock.json  package.json
scripts/: extract_abis.py  pyproject.toml  revenue_splitter_trigger.py
sdk/: pyproject.toml
sdk/composed/: __init__.py  _abis.py  _addresses.py  client.py  hash.py  types.py
sdk/tests/: test_addresses.py
servers/: Dockerfile  package-lock.json  package.json  tsconfig.json
watcher/: README.md
(+106 files in other folders)
