[project]
name = "analytics"
version = "0.1.0"
description = "Protocol analytics: indexer, API, and dashboard"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "web3",
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "plotly",
    "pandas",
    "requests",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "black",
]

[tool.ruff]
line-length = 100

[tool.ruff.config]
extend-ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.analytics]
# Analytics depends on contracts/scripts/utils.py for shared helpers.
# Ensure contracts are built and deployed before running analytics.
