[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "composed"
version = "0.1.0"
description = "Python SDK for the Composed Protocol — API integrity enforcement on Avalanche"
requires-python = ">=3.10"
dependencies = [
    "web3>=7.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["composed"]
